# smart-assistant

./: .env.example  .gitignore  CLAUDE.md  OPTIMIZATION_SUMMARY.md  README.md  docker-compose.yml  main.py  pyproject.toml
agent/: qa_agent.py
application/agent/: __init__.py  agentic_rag_agent.py  qa_agent.py
application/common/: app_initializer.py  component.py  component_registry.py
application/document/: collection_service_impl.py  document_retrieval_service_impl.py  document_service_impl.py
application/services/: agentic_rag_service_impl.py  collection_service_impl.py  document_service_impl.py
claude_plans/: analysis.md  change-mysql.md
config/: __init__.py  eval_settings.py  loader_config.yaml  log.py  rag_config.yaml  rag_settings.py  settings.py  splitter_config.yaml  vector_config.yaml
config/eval/: test_dataset_config.yaml
config/prompt/: agentic_rag.yaml  general_qa.yaml
config/tools/: agent_tools.yaml
domain/: __init__.py
domain/entity/: __init__.py
domain/eval/: test_dataset_config.py
domain/event/: __init__.py
domain/port/: embedding_port.py  logger_port.py  memory_port.py  model_port.py
domain/qa/: __init__.py
enums/: enums.py
interface/: container.py
memory/: __init__.py  memory_manager.py  middle_ware.py
models/: __init__.py  model_manager.py  openai_model_config.py
prompts/: __init__.py  prompt_manager.py
server/: __init__.py  handle.py  main.py
test/: test.py
tests/: __init__.py  demo_rag_product_qa.py  test.py  test_rag_pipeline.py
tools/: __init__.py  amap_weather_query.py  tool_manager.py  tool_shema.py
(+295 files in other folders)
