[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multitask-qa-assistant"
version = "0.1.0"
description = "多任务问答助手"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "redis>=7.0.0",
    "langchain-redis>=0.1.0",
    "pymilvus>=2.4.0",
    "dashscope>=1.14.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.30",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.3",
    "jq>=1.11.0",
    "ragas>=0.4.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["infrastructure*", "domain*", "application*", "interface*", "enums*", "config*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
